--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.99.2~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 23 May 2011 16:45:56 +0300
+
 libmeegotouch (0.99.1-1) unstable; urgency=low
 
   * New version
