--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libmeegotouch (0.99.2~1) unstable; urgency=low
+libmeegotouch (1.0.0~1) unstable; urgency=low
 
-  * unreleased
+  * [unreleased]
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 23 May 2011 16:45:56 +0300
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Tue, 24 May 2011 07:51:22 +0300
 
 libmeegotouch (0.99.1-1) unstable; urgency=low
 
