Changes: adding missing names to the credits.

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -37,6 +37,7 @@ Daniel d'Andrada
 Daniel Elstner
 Daniel Lehtovirta
 David King
+Dawid Klimt
 Denes Dezso
 Denis Dzyubenko
 Deqing Huang
@@ -102,6 +103,7 @@ Martin Scherbaum
 Matias Wilkman
 Matti Vuorela
 Max Waterman
+Michał Czernecki
 Michael Dominic K
 Michael Hasselmann
 Michal Guminiak
@@ -134,6 +136,7 @@ Pertti Kellomäki
 Peter Penz
 Peter Vajda
 Petri Hodju
+Piotr Karulis
 Piotr Podsiadły
 Ran Nyman
 Robin Burchell
