--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.22.1~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 26 May 2011 16:21:04 +0300
+
 libmeegotouch (0.22.0-1) unstable; urgency=low
 
   * New version
