--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.22.2~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 03 Jun 2011 13:04:52 +0300
+
 libmeegotouch (0.22.1-1) unstable; urgency=low
 
   * New version
