--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.22.3~1) unstable; urgency=low
+
+  * [unreleased]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Wed, 08 Jun 2011 17:27:05 +0300
+
 libmeegotouch (0.22.2-1) unstable; urgency=low
 
   * New version
