--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.22.5~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Mon, 13 Jun 2011 15:40:00 +0300
+
 libmeegotouch (0.22.4-1) unstable; urgency=low
 
   * Fixes: NB#263221
